--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.5",
+    "path": "^0.12.7",
     "pg": "^8.11.3",
     "pg-pool": "^3.6.1"
   }
